# SmartClaw

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml
.claude/skills/auto_develop/: SKILL.md
.claude/skills/auto_develop/references/: Develop_schedule.md  module_A.md  module_C.md  module_D.md  module_E.md  module_F.md  module_G.md  module_H.md
backend/: __init__.py  init.py
backend/agent/: __init__.py  system_prompt.py
backend/api/: __init__.py
backend/api/models/: __init__.py
backend/config/: __init__.py  errors.py  manager.py  models.py
backend/errors/: __init__.py  base.py
backend/logging/: __init__.py  formatter.py  redactor.py  rotating.py
backend/memory/: __init__.py  base.py  core.py  near.py  session.py
backend/rag/: __init__.py  cache.py  file_watcher.py  index_manager.py  memory_index_manager.py  models.py
backend/tools/: __init__.py  container.py  file_tools.py  python_repl.py  security.py  terminal.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py
tests/boundary/: __init__.py
tests/integration/: __init__.py  test_memory_integration.py  test_rag_integration.py  test_tool_integration.py
tests/unit/: __init__.py
tests/unit/agent/: __init__.py  test_system_prompt_builder.py
tests/unit/api/: __init__.py
tests/unit/config/: __init__.py  test_manager.py  test_models.py  test_validate.py
tests/unit/errors/: __init__.py  test_base.py
tests/unit/init/: __init__.py  test_init.py
tests/unit/logging/: __init__.py  test_formatter.py  test_namespace.py  test_redactor.py  test_rotating.py
tests/unit/memory/: __init__.py  test_base.py  test_core.py  test_core_tools.py  test_near.py  test_near_tools.py  test_session.py
tests/unit/rag/: __init__.py  test_cache.py  test_file_watcher.py  test_index_manager.py  test_memory_index_manager.py  test_memory_index_tools.py  test_models.py
tests/unit/tools/: __init__.py  test_container_manager.py  test_container_manager_boundary.py  test_file_reader.py  test_file_writer.py  test_python_executor.py  test_security_checker.py  test_security_checker_boundary.py  test_terminal_executor.py  test_tool_executor_boundary.py  test_url_fetcher.py
文档/: Develop_schedule.md  Memory.md  One_page.md  RAG.md  SmartClaw_DEV_SPEC.md  内置工具.md
