[project]
name = "smartclaw"
version = "0.1.0"
description = "轻量级透明记忆文件管理系统"
authors = [
    { name = "Levy Lee", email = "levy@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.11",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    # Agent Framework
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Docker
    "docker>=7.1.0",
    # RAG
    "chromadb>=0.5.0",
    "llama-index>=0.11.0",
    "llama-index-core>=0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    # File Watcher
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.5.0",
    # Code Quality
    "mypy>=1.10.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["temp*", "文档*", "tests*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"
